--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.easemob.im</groupId>
-    <artifactId>im-sdk-parent</artifactId>
-    <version>0.3.6-SNAPSHOT</version>
+    <artifactId>im-sdk-reactor-shaded-parent</artifactId>
+    <version>0.0.1</version>
     <packaging>pom</packaging>
 
     <name>Easemob IM SDK for Java</name>
@@ -16,7 +16,7 @@
     </description>
 
     <modules>
-        <module>im-sdk-core</module>
+        <module>im-sdk-core-reactor-shaded</module>
     </modules>
 
     <properties>
