--- a/im-sdk-core-reactor-shaded/pom.xml
+++ b/im-sdk-core-reactor-shaded/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>com.easemob.im</groupId>
     <artifactId>im-sdk-core-reactor-shaded</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
     <description>Easemob IM SDK Core</description>
     <parent>
         <groupId>com.easemob.im</groupId>
         <artifactId>im-sdk-reactor-shaded-parent</artifactId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
 
     <properties>
